:heavy_plus_sign: Added get robot status API endpoint.
